# cfl-variants

./: CFL.py  CMakeLists.txt  ColoringSaveLoad.cpp  ColoringSaveLoad.h  IntColoringSaveLoad.cpp  IntColoringSaveLoad.h  MultiCFL.cpp  MultiCFL.h  ParameterOptimize.cpp  ParameterOptimize.h  README.md  VariableCFL.cpp  VariableCFL.h  fileio0.cpp  fileio0.h  graph.cpp  graph.h  multicfl_main.cpp  randomInterferenceGraph.cpp  randomInterferenceGraph.h  testVariableCFL.py  variable_main.cpp
